2006-10-30  Per Bothner  <per@bothner.com>

	* ElementType.java (anyElement): New static final field.

2006-10-29  Per Bothner  <per@bothner.com>

	* Notation.java: New class.
	* Makefile.am: Update accordingly.
	* XDataType.java (NotationType): New static field.

2006-10-26  Per Bothner  <per@bothner.com>

	* KNode.java (atomicValue): Don't convert to UntypedAtomic here;
	thatis now handled by NodeTree.typevalue when it is appropriate.

	* MakeElement.java (beginGroup): Copy copyNamespacesMode to output
	Consumer if it is a NodeTree.

	* MakeElement.java (copyNamespacesMode): New field.
	(beginGroup): New copyNamespacesMode parameter.
	(apply, compileToNode): Update appropriately.

	* XmlNamespace.java: Renamed from gnu.kawa.lispexpr.XmlNamespace.
	(XHTML_NAMESPACE): New constant.
	(HTML): Use "" as prefix, to match xhtml recommendation.
	(HTML_BINDINGS): New field.
	(get): Set namespace nodes if this is HTML.
	(readResolve): Fix copy/paste error.
	* Makefile.am: Update accordingly.
	* ElementType.java (namespaceNodes): New field.
	(getNamespaceNodes, setNamespaceNodes): New methods.
	(getConstructor): If namespaceNodes set, copy to MakeElement instance.

2006-10-25  Per Bothner  <per@bothner.com>

	* StringValue.java (asString): New static method.
	* XDataType.java (cast): Use new method to cast to string.

2006-10-24  Per Bothner  <per@bothner.com>

	* Document.java (parseCached): Also call beginEntity/endEntity here.
	* Nodes.java (root): Fix thinko in BEGIN_ENTITY handling.

2006-10-22  Per Bothner  <per@bothner.com>

	* Document.java (parseCached): Also call beginEntity/endEntity.

	* MakeWithBaseUri.java: New class, extends NodeConstructor.
	* Makefile.am: Update accordingly.
	* KNode.java (make): Skip BEGIN_ENTITY instructions.
	(getBaseURI): Remove pointless method.
	* Document.java (parseCached): Inline call to removed BaseUri.baseUri.
	* Nodes.java (writeBaseUri): Removed method.
	(beginEntity, endEntity): New methods, for XConsumer.