@@ -1,3 +1,7 @@
+2006-10-30  Per Bothner  <per@bothner.com>
+
+	* misc.scm (base-uri): Update Since BaseUri class is now gone.
+
 2006-09-08  Per Bothner  <per@bothner.com>
 
 	* numbers.scm: Add require of kawa.lib.syntax needed for
